--- a/hello.html
+++ b/hello.html
@@ -55,6 +55,8 @@
             <span class="text-sm text-gray-500">Total Days/Year</span>
           </div>
              <!-- Progress Bar -->
+
+            <!-- ((used/total)*100) -->
     <div class="w-full h-3 mt-5 bg-gray-200 rounded-full overflow-hidden">
       <div class="h-full bg-yellow-500" style="width: 20%; float: left;"></div>
       <div class="h-full bg-orange-400" style="width: 10%; float: left;"></div>
